# bazel-scala-example

./: .bazelrc  .bazelversion  .scalafmt.conf  MODULE.bazel  README.md  WORKSPACE  maven_install.json
example-lib/: BUILD
example-lib/src/test/java/mypackage/: TestHello.java
example-lib/src/test/scala/mypackage/: Test.scala
example-maven/: BUILD
example-maven/src/main/scala/mypackage/: Maven.scala
example-maven/src/test/scala/mypackage/: Test.scala
tools/: BUILD  coverage.sh  scala.bzl  scala_version.bzl
tools/build_rules/: prelude_bazel
tools/jdk/: BUILD.bazel
