load("@io_bazel_rules_scala//scala:scala.bzl", "setup_scala_toolchain")
load("@io_bazel_rules_scala//scala/scalafmt/toolchain:setup_scalafmt_toolchain.bzl", "setup_scalafmt_toolchain")
load("@rules_java//toolchains:default_java_toolchain.bzl", "BASE_JDK9_JVM_OPTS", "DEFAULT_JAVACOPTS", "DEFAULT_TOOLCHAIN_CONFIGURATION", "default_java_toolchain")
load("//tools:scala_version.bzl", "scala_binary_suffix", "scala_version")

default_java_toolchain(
    name = "java21_toolchain",
    configuration = DEFAULT_TOOLCHAIN_CONFIGURATION,
    java_runtime = "@rules_java//toolchains:remotejdk_21",
    javacopts = DEFAULT_JAVACOPTS,
    # jvm_opts needs to stay this one also for Java 11, it seems to be common for Java 9+ versions.
    # It includes e.g. Java module system options.
    jvm_opts = BASE_JDK9_JVM_OPTS,
    source_version = "21",
    target_version = "21",
    visibility = ["//visibility:public"],
)

setup_scala_toolchain(
    name = "my_scala_toolchain",
    scala_compile_classpath = [
        "@maven//:org_scala_lang_scala_compiler",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_library_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_macro_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scalacopts = ["-Ywarn-unused"],
    unused_dependency_checker_mode = "off",
    visibility = ["//visibility:public"],
)

setup_scalafmt_toolchain(
    name = "scalafmt_toolchain",
    scala_version = scala_version,
    scalafmt_classpath = [
        "@maven//:%s_%s" % (dep, scala_binary_suffix)
        for dep in [
            "com_geirsson_metaconfig_core",
            "org_scalameta_parsers",
            "org_scalameta_scalafmt_core",
            "org_scalameta_scalafmt_sysops",
            "org_scalameta_trees",
        ]
    ],
    visibility = ["//visibility:public"],
)
