load("@rules_java//toolchains:default_java_toolchain.bzl", "BASE_JDK9_JVM_OPTS", "DEFAULT_JAVACOPTS", "DEFAULT_TOOLCHAIN_CONFIGURATION", "default_java_toolchain")
load("@rules_scala//scala:scala.bzl", "setup_scala_toolchain")
load("@rules_scala//scala/scalafmt/toolchain:setup_scalafmt_toolchain.bzl", "setup_scalafmt_toolchain")
load("@rules_scala//testing:testing.bzl", "setup_scala_testing_toolchain")
load("//tools:scala_version.bzl", "scala_binary_suffix", "scala_version")

default_java_toolchain(
    name = "java21_toolchain",
    configuration = DEFAULT_TOOLCHAIN_CONFIGURATION,
    java_runtime = "@rules_java//toolchains:remotejdk_21",
    javacopts = DEFAULT_JAVACOPTS,
    # jvm_opts needs to stay this one also for Java 11, it seems to be common for Java 9+ versions.
    # It includes e.g. Java module system options.
    jvm_opts = BASE_JDK9_JVM_OPTS,
    source_version = "21",
    target_version = "21",
    visibility = ["//visibility:public"],
)

setup_scala_toolchain(
    name = "my_scala_toolchain",
    parser_combinators_deps = [
        "@maven//:org_scala_lang_modules_scala_parser_combinators_%s" % scala_binary_suffix,
    ],
    scala_compile_classpath = [
        "@maven//:org_scala_lang_scala_compiler",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_library_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_macro_classpath = [
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
    ],
    scala_xml_deps = [
        "@maven//:org_scala_lang_modules_scala_xml_%s" % scala_binary_suffix,
    ],
    strict_deps_mode = "error",
    unused_dependency_checker_mode = "off",
    visibility = ["//visibility:public"],
)

setup_scalafmt_toolchain(
    name = "scalafmt_toolchain",
    scala_version = scala_version,
    scalafmt_classpath = [
        "@maven//:%s_%s" % (dep, scala_binary_suffix)
        for dep in [
            "org_scalameta_metaconfig_core",
            "org_scalameta_parsers",
            "org_scalameta_scalafmt_core",
            "org_scalameta_scalafmt_sysops",
            "org_scalameta_trees",
        ]
    ],
    visibility = ["//visibility:public"],
)

setup_scala_testing_toolchain(
    name = "testing_toolchain",
    scala_version = scala_version,
    scalatest_classpath = [
        "@maven//:org_scalactic_scalactic_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_compatible",
        "@maven//:org_scalatest_scalatest_core_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_featurespec_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_flatspec_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_freespec_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_funspec_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_funsuite_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_matchers_core_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_mustmatchers_%s" % scala_binary_suffix,
        "@maven//:org_scalatest_scalatest_shouldmatchers_%s" % scala_binary_suffix,
    ],
)
